--- a/css/_page.scss
+++ b/css/_page.scss
@@ -240,25 +240,26 @@
 .mainMsg {
     padding: 20px;
     background-color: #fff;
-    .mainMsg-title {
-        min-width: 100px;
-        padding: 0 10px;
-        height: 36px;
-        line-height: 36px;
-        text-align: center;
-        display: block;
-        @include fullNone;
-        @include toolColor(#f39700, #e60012, #ec6941);
-        color: #fff;
-        font-size: 1rem;
-        font-weight: bold;
-        letter-spacing: 1px;
-        margin-bottom: 15px;
-        display: inline-block;
-    }
     & > div + div {
         margin-top: 40px;
     }
+}
+
+.mainMsg-title {
+    min-width: 100px;
+    padding: 0 10px;
+    height: 36px;
+    line-height: 36px;
+    text-align: center;
+    display: block;
+    @include fullNone;
+    @include toolColor(#f39700, #e60012, #ec6941);
+    color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+    display: inline-block;
 }
 
 // mainNews start
@@ -800,8 +801,8 @@
                 }
             }
         }
-        .gameSchedule {       
-            .gameSchedule_tb{
+        .gameSchedule {
+            .gameSchedule_tb {
                 max-height: 360px;
                 border: 1px solid #eaeaea;
                 overflow-y: scroll;
@@ -813,40 +814,40 @@
                 tr + tr {
                     border-top: 1px solid #dee2e6;
                 }
-                th{
+                th {
                     height: 40px;
                     line-height: 40px;
                     font-weight: 600;
-                    padding: 0 5px;  
+                    padding: 0 5px;
                     background: #dee2e6;
                     font-size: 0.95rem;
                 }
-                td{
-                    padding: 10px 5px;  
+                td {
+                    padding: 10px 5px;
                     &:nth-child(1),
-                    &:nth-child(3){
+                    &:nth-child(3) {
                         width: 40%;
-                    }   
-                    &:nth-child(2){
+                    }
+                    &:nth-child(2) {
                         width: 20%;
                         text-align: center;
-                    }  
-                    &>div{
+                    }
+                    & > div {
                         display: flex;
                         align-items: center;
                     }
-                    span{
+                    span {
                         width: 100%;
                     }
-                    .club_1{
+                    .club_1 {
                         justify-content: flex-end;
                         text-align: right;
                     }
-                    .club_1{
+                    .club_1 {
                         justify-content: flex-start;
                     }
                 }
-    
+
                 .badge {
                     width: 20px;
                     display: inline-block;
@@ -855,10 +856,241 @@
                 .time {
                     padding: 2px 5px;
                     background: #dbdbdb;
-                    font-weight: bold;  
+                    font-weight: bold;
                     border-radius: 3px;
                 }
             }
         }
+    }
+
+    // scheduleList start (時程表)
+    .scheduleList {
+        color: #000;
+        .dateList {
+            margin-bottom: 20px;    
+            .today {
+                padding-bottom: 10px;
+                font-size: 1.1rem;
+                font-weight: bold;
+                text-align: center;
+            }
+            ul {
+                display: flex;
+                border: 1px solid #bfbfbf;
+                box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+            }
+            li {
+                padding: 10px;
+                flex: 1;
+                color: #626262;
+                font-weight: bold;
+                font-size: 0.95rem;
+                position: relative;
+                cursor: pointer;
+                transition: 0.3s;
+                &:active {
+                    background-color: #bfbfbf;
+                }
+                @include hover {
+                    &:hover {
+                        background-color: #bfbfbf;
+                    }
+                }
+            }
+
+            li + li::before {
+                content: "";
+                width: 1px;
+                height: calc(100% - 20px);
+                margin: auto;
+                background-color: #bfbfbf;
+                position: absolute;
+                @include pos(tbl, 0);
+            }
+            .date_num {
+                font-size: 1.8rem;
+
+                margin-bottom: 15px;
+            }
+            .date_week {
+                text-align: right;
+            }
+        }
+
+        .matchList {
+            table{
+                width: 100%;
+            }
+
+            tr+tr{
+                border-top: 1px solid #bfbfbf;
+            }
+            td{
+                padding: 20px 10px;       
+                &:first-child{
+                    white-space: nowrap;
+                }
+                &:last-child{
+                    width: 100%;
+                }
+            }
+            
+            .match_title{
+                font-size: 0.85rem;  
+                &>p{
+                    font-size: 0.9rem;
+                    font-weight: bold;
+                }
+                &.on .match_live{
+                    display: block;
+                }
+            }
+            .match_time{
+                display: flex;
+                align-items: center;
+                padding-bottom: 4px;       
+                p{  
+                    padding-right: 10px;        
+                }
+            }
+            .match_live{
+                padding: 1px 4px;
+                border-radius: 2px;
+                color: #f00;
+                border: 1px solid #f00;
+                text-align: center;
+                animation: match_live 1s infinite;
+                display: none;
+            }
+
+            .match_teams{
+                display: flex;
+                align-items: center;
+                .vs{
+                    width: 40px;
+                    font-size: 0.9rem;
+                    text-align: center;
+                }
+                .team{
+                    width: calc((100% - 40px)/2);
+                    display: flex;
+                    align-items: center;
+                }
+                .team_flag{
+                    width: 30px;
+                    margin: 0 10px;
+                }
+                .team_L{
+                    justify-content: flex-end;
+                }
+            }
+        }   
+    }
+}
+
+@keyframes match_live{
+    0%,49%{
+        color: #fff;
+        background-color: #f00;
+    }
+    50%{
+        color: #f00;
+        background-color: transparent;
+    }
+}
+
+// 新聞內頁
+.newsRef_box{
+    display: flex;  
+    padding: 40px 40px 150px;
+    color: #000;
+    background-color: #fff;
+}
+.newsRef_cnt{
+    width: calc(100% - 300px);
+    margin-right: 20px;
+    &>div+div{
+        margin-top: 30px;
+    }
+    .newsRef_title{
+        p{
+            padding-bottom: 10px;
+            font-size: 1.6rem;
+            font-weight: bold;
+            line-height: 35px;
+        }
+        .txtDate{
+            padding: 10px;
+            font-size: 0.85rem;
+            text-align: right;
+            color: #999999;
+            background-color: #e5e5e5;
+        }
+    }
+    .color-b{
+        color: #00a0e9;
+    }
+    .newsRef_txt{
+        font-size: 1.2rem;
+        .selfTxt{
+            padding: 3px 5px;
+            background-color: #ea0000;
+            color: #fff;
+        }
+        li{
+            line-height: 28px;
+        }
+        li+li{
+            margin-top: 25px;
+        }
+    }
+    .newsRef_list{
+        font-size: 1.2rem;
+        color: #00a0e9;
+        ul{
+            list-style: inside;
+        }
+        li{
+            line-height: 28px;
+        }
+    }
+    .newsRef_img{
+       p{
+           padding-top: 10px;
+           font-weight: bold;
+       }
+    }
+    .newsRef_mv{
+        div{
+            width: 100%;
+            height: 0;
+            padding-bottom: calc(100% / 1.775);
+            position: relative;
+            iframe {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        }
+        p{
+            padding-top: 10px;
+            font-weight: bold;
+        }
+    }
+    
+}
+
+.newsRef_menu{
+    width: 300px;
+    &>div+div{
+        margin-top: 50px;
+    }
+    p{
+        padding-top: 10px;
+    }
+    li+li{
+        margin-top: 20px;
     }
 }
