--- a/css/_main.scss
+++ b/css/_main.scss
@@ -480,8 +480,10 @@ body {
         .ft_menu {
             ul {
                 display: flex;
+                align-items: flex-end;
                 font-size: 1rem;
                 font-weight: bold;
+                
             }
             li {
                 transition: 0.3s;
