--- a/css/_page.scss
+++ b/css/_page.scss
@@ -999,7 +999,7 @@
     }
 }
 
-// 新聞內頁
+// newsRef start(新聞內頁)
 .newsRef_box{
     display: flex;  
     padding: 40px 40px 150px;
@@ -1081,7 +1081,6 @@
     }
     
 }
-
 .newsRef_menu{
     width: 300px;
     &>div+div{
@@ -1094,3 +1093,61 @@
         margin-top: 20px;
     }
 }
+
+// resourcesBox start 資源頁(銀行&投注連結)
+
+.resourcesBox{
+    .res-Title{
+        margin-bottom: 15px;
+        display: flex;
+        align-items: center;
+        color: #f7e6be;
+        span{
+            display: inline-block;
+            padding: 0 10px;
+        }
+    } 
+    .resList-img{
+        max-width: 120px;
+        margin: auto;
+    }
+
+    .resList-tb{  
+        background-color: #fff;
+        table{
+            width: 100%;
+        }
+        td{
+            height: 95px;
+            border: 1px solid #ccc;
+        }  
+    }
+
+    .resList-list{
+        color: #000;
+        background-color: #fff;
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            &:nth-child(even){
+                background-color: #c1d6fb;
+            }
+        }
+        li{
+            width: calc(100%/6);
+            height: 55px;
+            line-height: 55px;
+            text-align: center;
+           
+        }
+    }
+    
+    .bank-icon{
+        width: 22px;
+        height: 22px;
+        background: url(../images/icon/icon-bank.svg) no-repeat center / cover;
+    } 
+
+
+}
+
