20210727-資訊內頁切版

--- a/css/_page.scss
+++ b/css/_page.scss
@@ -1129,7 +1129,7 @@
         ul{
             display: flex;
             flex-wrap: wrap;
-            &:nth-child(even){
+            &:nth-child(odd){
                 background-color: #c1d6fb;
             }
         }
