--- a/css/_page.scss
+++ b/css/_page.scss
@@ -259,7 +259,7 @@
     font-weight: bold;
     letter-spacing: 1px;
     margin-bottom: 15px;
-    display: inline-block;
+    display: inline-block !important;
 }
 
 // mainNews start
@@ -532,233 +532,4 @@
     }
 }
 
-// forumBox start (討論區頁)
-.forumBox {
-    .mainMsg {
-        border-radius: 5px;
-    }
 
-    // forum_obvious start
-    @at-root .forum_obvious {
-        margin-bottom: 15px;
-        ul {
-            display: flex;
-        }
-        li {
-            width: calc(100% / 3);
-            padding: 10px 30px;
-            border-radius: 5px;
-            color: #8fc31f;
-            font-size: 1.1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #fff;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.8) inset;
-        }
-        li + li {
-            margin-left: 10px;
-        }
-        span {
-            color: #00479d;
-            padding-right: 5px;
-            flex-shrink: 0;
-            font-weight: bold;
-        }
-        p {
-            white-space: nowrap;
-            overflow: hidden;
-        }
-    }
-
-    // forum_top start
-    @at-root .forum_top {
-        @at-root .forum_link {
-            margin-bottom: 15px;
-            color: #00479d;
-            ul {
-                display: flex;
-                justify-content: flex-end;
-            }
-            li {
-                padding: 0 10px;
-                position: relative;
-                cursor: pointer;
-                font-weight: bold;
-                transition: 0.3s;
-                & + li::before {
-                    content: "";
-                    width: 1px;
-                    height: 100%;
-                    background-color: #00479d;
-                    position: absolute;
-                    @include pos(tl, 0);
-                }
-                &:active,
-                &.on {
-                    color: #f25d0a;
-                }
-                @include hover {
-                    &:hover {
-                        color: #f25d0a;
-                    }
-                }
-            }
-        }
-
-        @at-root .forum_search {
-            text-align: right;
-            & > div {
-                width: 50%;
-                max-width: 425px;
-                display: inline-block;
-                height: 35px;
-                padding-top: 4px;
-                box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3) inset;
-                border-radius: 5px;
-                border-bottom: 1px solid #626262;
-                position: relative;
-            }
-            input {
-                width: 100%;
-                height: 100%;
-                padding: 0 10px;
-                padding-right: 35px;
-                @include fullNone;
-                font-size: 0.95rem;
-            }
-            .icon {
-                width: 32px;
-                height: 32px;
-                margin: auto;
-                background: url(../images/icon/icon-search.svg) no-repeat center / 50%;
-                position: absolute;
-                @include pos(tbr, 0);
-                cursor: pointer;
-            }
-        }
-    }
-
-    // forum_tool start
-    @at-root .forum_tool {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        color: #000;
-        & > div {
-            display: flex;
-        }
-        .title {
-            padding: 2px 8px;
-            background-color: #7d7d7d;
-            color: #fff;
-            border-radius: 2px;
-        }
-        ul {
-            display: flex;
-            align-items: center;
-        }
-        li {
-            padding: 0 10px;
-            position: relative;
-            font-weight: bold;
-            cursor: pointer;
-            &.on,
-            &:active {
-                color: #a40000;
-            }
-            @include hover {
-                &:hover {
-                    color: #a40000;
-                }
-            }
-        }
-        li + li::before {
-            content: "";
-            width: 1px;
-            height: 100%;
-            background-color: #000;
-            position: absolute;
-            @include pos(tl, 0);
-        }
-        .btn {
-            padding: 0 10px;
-        }
-        @at-root .forum_sort {
-            display: flex;
-        }
-        @at-root .forum_array {
-            display: flex;
-            margin-left: 30px;
-        }
-    }
-
-    // forum_list start
-    @at-root .forum_list {
-        table {
-            width: 100%;
-            color: #626262;
-        }
-        tr:nth-child(odd){
-            background-color: #c9c9c9;
-        }
-        th {
-            width: 20%;
-            height: 50px;
-            background-color: #000;
-            position: relative;
-            font-weight: bold;
-            &:first-child {
-                width: 40%;
-            }
-        }
-        th + th {
-            border-left: 1px solid #dcdcdc;
-        }
-        td {
-            padding: 0 15px;
-            .title {
-                height: 60px;
-                display: flex;
-                align-items: center;
-                p {
-                    color: #0068b7;
-                    @include txtChip(1);
-                }
-            }
-            .sort {
-                margin-right: 10px;
-                color: #000;
-                position: relative;
-                letter-spacing: 1px;
-                flex-shrink: 0;
-                &::before {
-                    content: "[";
-                }
-                &::after {
-                    content: "]";
-                }
-            }
-            .author {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                .avatar {
-                    width: 40px;
-                    flex-shrink: 0;
-                    margin-right: 10px;
-                }
-            }
-            .msg{
-                text-align: center;
-                p {
-                    padding-top: 2px;
-                }
-            }
-            .num{
-                text-align: center;
-                letter-spacing: 1px;
-            }
-        }
-    }
-}
