--- a/css/all.scss
+++ b/css/all.scss
@@ -14,4 +14,6 @@
 @import "page";  //內頁共通設定
 @import "broadcast";  //足球轉播頁
 @import "newsRef";  //新聞內頁
+@import "forum";  //討論區頁
 @import "resources";  //資源頁(銀行&投注連結)
+
